a lot of changes and improvements

--- a/BeautySalon/ProductPayment.resx
+++ b/BeautySalon/ProductPayment.resx
@@ -120,4 +120,81 @@
   <metadata name="menuStrip2.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAABAAAJdLAACXSwAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAAQAAAA0AAAANAAAADAAAAA0AAAAMAAAADAAA
+        AAwAAAAMAAAADQAAAA0AAAAMAAAADAAAAAwAAAAMAAAADAAAAAwAAAAMAAAADAAAAAwAAAAMAAAADAAA
+        AAwAAAAMAAAADAAAAAwAAAAMAAAADQAAAA0AAAABAAAAAAAAAAAAAACHAAAAlwAAAIYAAACKAAAAiAAA
+        AIoAAACKAAAAigAAAIoAAACJAAAAiQAAAIoAAACKAAAAigAAAIoAAACKAAAAigAAAIoAAACKAAAAigAA
+        AIoAAACKAAAAigAAAIoAAACKAAAAigAAAIoAAACGAAAAlwAAAIcAAAAAAAAAAAAAAKQAAACiAAAAiAAA
+        AIwAAACPAAAAjAAAAIwAAACMAAAAiwAAAI0AAACPAAAAiwAAAIwAAACNAAAAjQAAAI0AAACNAAAAjQAA
+        AI0AAACNAAAAjQAAAI0AAACNAAAAjQAAAI0AAACNAAAAjAAAAIgAAACiAAAApAAAAAAAAAAAAAAAEwAA
+        AK8AAAA5AAAAOQAAAK0AAAAvAAAAMAAAADIAAAAlAAAAXwAAAJsAAAAiAAAAMQAAACgAAAApAAAAKgAA
+        ACgAAAAoAAAAKAAAACgAAAAoAAAAKAAAACkAAAAqAAAAJwAAACwAAAAtAAAAOwAAAK8AAAATAAAAAAAA
+        AAAAAAAAAAAAlwAAAAoAAAAKAAAAlgAAAAAAAAAAAAAAAgAAAAAAAAA4AAAAgQAAAAAAAAAGAAAAGgAA
+        ABYAAAAMAAAAGAAAABcAAAAXAAAAFwAAABcAAAAYAAAAEAAAAA8AAAAeAAAACQAAAAAAAAAOAAAAlgAA
+        AAAAAAAAAAAAAAAAAAAAAACbAAAADAAAAAwAAACaAAAAAQAAAAIAAAAEAAAAAAAAADoAAACIAAAAAAAA
+        AIUAAACcAAAAlwAAAM8AAACNAAAAlQAAAJQAAACUAAAAlQAAAIwAAAC3AAAAvAAAAH8AAACwAAAAAwAA
+        AA4AAACbAAAAAAAAAAAAAAAAAAAAAAAAAJoAAAALAAAACwAAAJkAAAAAAAAAAAAAAAIAAAAAAAAAOQAA
+        AIcAAAAAAAAAkAAAAHAAAACGAAAAUQAAAAAAAAADAAAAAAAAAAAAAAABAAAAAAAAABsAAACbAAAAVQAA
+        AK0AAAAHAAAADAAAAJoAAAAAAAAAAAAAAAAAAAAAAAAAmgAAAAsAAAALAAAAmQAAAAAAAAAAAAAAAgAA
+        AAAAAAA5AAAAhwAAAAAAAACMAAAA7QAAAMcAAAAKAAAAAAAAAAQAAAACAAAAAgAAAAMAAAAGAAAAAAAA
+        AI0AAADvAAAAwgAAAAEAAAANAAAAmgAAAAAAAAAAAAAAAAAAAAAAAACaAAAACwAAAAsAAACZAAAAAAAA
+        AAAAAAACAAAAAAAAADkAAACIAAAAAAAAAJQAAAD/AAAAvAAAAKoAAAAoAAAAAAAAAAIAAAAAAAAAAAAA
+        AAQAAACOAAAAtgAAAO0AAADZAAAAAAAAAA4AAACaAAAAAAAAAAAAAAAAAAAAAAAAAJoAAAALAAAACwAA
+        AJkAAAACAAAAAwAAAAUAAAAAAAAAOwAAAIYAAAAAAAAAiwAAAL4AAACSAAAAawAAAKQAAAAEAAAAAwAA
+        AAcAAAAAAAAAfgAAAIMAAACIAAAApgAAAL8AAAACAAAADAAAAJoAAAAAAAAAAAAAAAAAAAAAAAAAmgAA
+        AAsAAAALAAAAmQAAAAAAAAAAAAAAAgAAAAAAAAA5AAAAhwAAAAAAAAB7AAAAmQAAAHIAAABuAAAAbgAA
+        AFYAAAAAAAAAAAAAABsAAACQAAAAVgAAAIAAAACCAAAAmwAAAAsAAAALAAAAmgAAAAAAAAAAAAAAAAAA
+        AAAAAACaAAAADQAAAAIAAACzAAAAlAAAAIwAAACOAAAAhgAAAK8AAAB/AAAAAAAAAH8AAADSAAAArwAA
+        AMIAAACsAAAAvwAAAIcAAACJAAAAqwAAALoAAAC6AAAAswAAAMkAAACwAAAAAwAAAA0AAACaAAAAAAAA
+        AAAAAAAAAAAAAAAAAJoAAAAPAAAAAAAAABcAAAAlAAAAKwAAACoAAAAqAAAAKQAAAAoAAAAAAAAADQAA
+        ACMAAAAjAAAAIQAAACUAAAAhAAAAKwAAACsAAAAlAAAAIgAAACIAAAAkAAAAGwAAABgAAAAAAAAADwAA
+        AJoAAAAAAAAAAAAAAAAAAAAAAAAAmgAAAA4AAAAAAAAABQAAABYAAAAAAAAAAAAAAAAAAAAAAAAAAQAA
+        AAIAAAABAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEAAAAYAAAABQAA
+        AAAAAAAOAAAAmgAAAAAAAAAAAAAAAAAAAAAAAACaAAAAEAAAAAAAAACHAAAAvQAAAGcAAAAAAAAAAwAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAMAAAAAAAAAZwAA
+        AL4AAACHAAAAAAAAABAAAACaAAAAAAAAAAAAAAAAAAAAAAAAAJ0AAAAAAAAAXwAAAMkAAACAAAAAzQAA
+        AGAAAAAyAAAAPgAAADwAAAA8AAAAPAAAADwAAAA8AAAAPAAAADwAAAA8AAAAPAAAADwAAAA+AAAAMgAA
+        AGAAAADMAAAAgAAAAMoAAABfAAAAAAAAAJ0AAAAAAAAAAAAAAAAAAAAAAAAAngAAAAAAAACAAAAAqAAA
+        AG8AAACwAAAAswAAAHcAAAB1AAAAdAAAAHQAAAB0AAAAdAAAAHQAAAB0AAAAdAAAAHQAAAB0AAAAdAAA
+        AHUAAAB3AAAAswAAALAAAABuAAAAqAAAAIAAAAAAAAAAngAAAAAAAAAAAAAAAAAAAAAAAACcAAAAAgAA
+        ADsAAAD/AAAAgwAAAJwAAAAnAAAAAAAAADgAAAA4AAAANwAAADcAAAA3AAAANwAAADcAAAA3AAAANwAA
+        ADcAAAA4AAAAOAAAAAMAAAAWAAAA8wAAAKMAAACOAAAATAAAAAAAAACcAAAAAAAAAAAAAAAAAAAAAAAA
+        AJwAAAAAAAAARQAAAHYAAAB2AAAA1AAAAA0AAACNAAAAlAAAAHgAAAB+AAAAfQAAAH0AAAB9AAAAfQAA
+        AH0AAAB9AAAAfgAAAHgAAACUAAAAigAAABsAAACJAAAAWgAAANwAAAA2AAAAAwAAAJwAAAAAAAAAAAAA
+        AAAAAAAAAAAAmgAAAAAAAAA/AAAAvQAAAAMAAAC1AAAAGgAAAJEAAAAWAAAAAAAAAAEAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAABAAAAAAAAABYAAACRAAAAFQAAAM4AAAAMAAAAmwAAAEQAAAAAAAAAmgAA
+        AAAAAAAAAAAAAQAAAAAAAAChAAAAJwAAAE8AAADCAAAAcwAAAJQAAAAXAAAAcwAAAKoAAACTAAAAlwAA
+        AJcAAACXAAAAlwAAAJcAAACXAAAAlwAAAJcAAACTAAAAqgAAAHUAAAAPAAAAvgAAAIMAAACIAAAAVwAA
+        ACYAAAChAAAAAAAAAAEAAAACAAAAAAAAAE8AAACSAAAAywAAAJgAAACeAAAA/gAAACEAAAAAAAAAHQAA
+        AB0AAAAdAAAAHQAAAB0AAAAdAAAAHQAAAB0AAAAdAAAAHQAAAB0AAAAdAAAAAAAAADAAAACtAAAAgQAA
+        AP8AAAC7AAAAlAAAAE8AAAAAAAAAAgAAAAAAAAAAAAAABAAAAAAAAACCAAAAoQAAAGYAAACfAAAAwgAA
+        AI8AAACRAAAAjwAAAI8AAACPAAAAjwAAAI8AAACPAAAAjwAAAI8AAACPAAAAjwAAAJEAAACQAAAAwQAA
+        AKgAAABpAAAAlQAAAIQAAAAAAAAABAAAAAAAAAAAAAAAAAAAAAAAAAAFAAAAAAAAAEoAAADSAAAAlQAA
+        ANAAAAAxAAAADwAAABcAAAAWAAAAFgAAABYAAAAWAAAAFgAAABYAAAAWAAAAFgAAABYAAAAWAAAAFwAA
+        AA8AAAAyAAAAzgAAAJQAAADUAAAASQAAAAAAAAAFAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACAAAAAAAA
+        AGIAAACqAAAARAAAAAAAAAACAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAgAAAAAAAABFAAAAqgAAAGIAAAAAAAAAAgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAACAAAAAgAAAAYAAAABAAAAAgAAAAAAAAABAAAAAQAAAAEAAAABAAAAAQAAAAEAAAABAAAAAQAA
+        AAEAAAABAAAAAQAAAAEAAAAAAAAAAgAAAAEAAAAGAAAAAgAAAAIAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAACAAAAAQAAAAIAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAgAAAAEAAAACAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA/////4AAAAEv///0gAAAAYAAAAGAAAABgAAAAUJIABKASAABw0haA8NI
+        AQPCSCQTwEgEA8JIGAPACAADyAgAE8ii/RPIn/kT0AAAC9AAAAvAAAALQAAAAtAX6AtAAAACQEACApAA
+        AAlQAAAKyJ/5E9AAAAvQv/0L6P//F/////8=
+</value>
+  </data>
 </root>
